# Isekai

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
assets/: distros.json
backend/: Cargo.toml  GEMINI.md  backend.rc  build.rs
backend/src/: cli.rs  main.rs
backend/src/application/: mod.rs  state.rs  telemetry.rs
backend/src/application/workflow/: mod.rs  shrink_install_local.rs  shrink_install_remote.rs  uninstall.rs
backend/src/assets/: README.md  bootx64.efi  exfat_x64.efi
backend/src/cli/: commands.rs  helper.rs  mod.rs  repl.rs
backend/src/domain/: errors.rs  mod.rs  models.rs  traits.rs  validation.rs
backend/src/infrastructure/: PayloadManager.rs  assets.rs  blockdev.rs  boot_manager.rs  iso_manager.rs  linux_disk.rs  linux_validator.rs  logger.rs  mod.rs  network.rs  payload_manager.rs  windows_disk.rs  windows_validator.rs
backend/src/infrastructure/boot/: legacy.rs  mod.rs  uefi.rs
backend/src/infrastructure/windows/: autoplay.rs  bitlocker.rs  diskpart.rs  iso_manager.rs  manager.rs  mod.rs  payload_manager.rs  planner.rs  saga.rs  utils.rs  wmi.rs
backend/src/infrastructure/windows/boot/: legacy.rs  mod.rs  sniffer.rs  uefi.rs
backend/src/ipc/: handler.rs  mod.rs  protocol.rs  server.rs  state.rs
frontend/: build.gradle.kts
frontend/src/nativeInterop/cinterop/: intl.def
frontend/src/nativeMain/kotlin/dev/datlag/isekai/: Main.kt  Symbols.kt
frontend/src/nativeMain/kotlin/dev/datlag/isekai/common/: DistroExtensions.kt  IPCExtensions.kt  IpcExtensions.kt
frontend/src/nativeMain/kotlin/dev/datlag/isekai/domain/: Disk.kt  IpcClient.kt  IsekaiCommand.kt  IsekaiEvent.kt
frontend/src/nativeMain/kotlin/dev/datlag/isekai/ipc/: IPCError.kt  (+11 more)
frontend/src/nativeMain/resources/locale/: de.po  isekai.pot
gradle/: libs.versions.toml
(+42 files in other folders)
