[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
mockall = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
wmi = "0.18.4"
clap = { version = "4", features = ["derive"] }
shlex = "2.0.1"
clap_complete = "4.6.5"
rustyline = "18.0.0"

[profile.dev]
strip = "debuginfo"
opt-level = 1