[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
mockall = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
wmi = "0.18.4"
clap = { version = "4", features = ["derive"] }
shlex = "2.0.1"
clap_complete = "4.6.5"
rustyline = "18.0.0"
which = "8.0.2"
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.32"
regex = "1.12.3"
embed-resource = "3.0.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [ "fmt", "ansi", "env-filter", "registry" ] }
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Com",
    "Win32_System_SystemInformation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security_Authorization",
    "Win32_Security",
    "Win32_System_Memory"
] }
windows-registry = "0.6.1"
sha2 = "0.11.0"
directories = "6.0.0"
tracing-appender = "0.2.5"
reqwest = { version = "0.13.4", features = ["json"] }

[profile.dev]
strip = "debuginfo"
opt-level = 1

[build-dependencies]
embed-resource = "3.0.9"

[[bin]]
name = "isekai-daemon"
path = "src/main.rs"
